--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.3",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
